add Cart and History

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="default_web_client_id_bookingFF">253666236099-6hp907darl75h3l0rr8djjuodt9mn32b.apps.googleusercontent.com</string>
     <string name="something_went_wrong">Something went wrong</string>
     <string name="user_share_pref">userSharePref</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="back"><![CDATA[<]]></string>
+    <string name="forward"><![CDATA[>]]></string>
 </resources>
